portal/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: portal-frontend
  name: portal-frontend
spec:
  ports:
    - name: "8100"
      port: 8100
      targetPort: 80
  selector:
    io.kompose.service: portal-frontend
