portal/frontend/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: portal-frontend

spec:
  entryPoints:
    - websecure
  tls:
    secretName: portal-tls
  routes:
    - kind: Rule
      match: Host(`portal.trap.jp`)
      services:
        - namespace: portal
          kind: Service
          name: portal-frontend
          port: 8100
          scheme: http
          strategy: RoundRobin
          weight: 1
